--- a/views/css/_select.sass
+++ b/views/css/_select.sass
@@ -1,5 +1,25 @@
 $ninesixty-columns: 16
 
+#select
+
+	h4
+		margin: 10px
+		
+
+	.titulo
+		font-size: 30px
+		color: #fff
+		font-weight: bold
+
+	#btnGoPrint
+		margin: 10px
+		color: #333
+		font-size: 14px
+		font-decoration: none
+
+
+	#txt_titulo
+
 .itemList
 	+grid-unit-base
 	+grid-width(8,-10px)
@@ -59,7 +79,7 @@ $ninesixty-columns: 16
 		margin-top: 30px
 		+grid-unit-base
 		width: 220px
-		height: 300px
+		height: 390px
 		overflow: hidden
 		padding-left: 65px
 		
@@ -68,22 +88,22 @@ $ninesixty-columns: 16
 			font-weight: bold
 			width: 200px
 			margin-bottom: 3px
+			margin-top: 8px
 		h3
 			font-size: 19px
 			font-weight: bold
-
 			width: 200px
 			color: #244B84
 		.imagen
 			overflow: hidden
 			margin-left: 25	px
-			width: 130px
-			height: 130px
+			width: 200px
+			height: 200px
 			img
-				width: 130px
-				height: 130px
+				width: 200px
+				height: 200px
 		ul
-			max-height: 92px
+			max-height: 140px
 			overflow: hidden
 			margin-bottom: 5px
 			
